# ChatX.c-

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: .env.example  CMakeLists.txt
backend/include/handlers/: AuthHandler.h  ChatHandler.h  WSController.h
backend/include/models/: Conversation.h  Message.h  User.h
backend/include/utils/: Config.h  Database.h
backend/src/: main.cpp
backend/src/utils/: Database.cpp
frontend/: package-lock.json  package.json  vite.config.js  webpack.config.js
frontend/src/: App.svelte  main.js
frontend/src/stores/: conversations.js  ui.js  user.js
public/: index.html
